# rsearch

./: Cargo.toml  README.md
src/: lib.rs  main.rs
tests/fixtures/: 1.eml
