[package]
name = "rsearch"
version = "0.1.0"
authors = ["Kevin Clark <kevin.clark@gmail.com>"]
description = "A toy search engine as a learning project"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mailparse = "0.12"
itertools = "0.9"
clap = "2"
walkdir = "2"
